Add standalone Tomcat 7/8 support + Comsat version